<!--
This XML file is used by ROS. It declares that this directory and all of its
subdirectories constitute a ROS package. It further enables Drake to be compiled
by the Catkin build system. For more information see the following websites:

http://wiki.ros.org/catkin
http://wiki.ros.org/catkin/package.xml
-->

<package format="2">
  <name>drake</name>

  <version>0.0.0</version>

  <description>
    Drake is a planning, control, and analysis toolbox for nonlinear dynamical
    systems.
  </description>

  <license>BSD</license>

  <author>Russ Tedrake</author>

  <maintainer email="drake-users@mit.edu">Drake Users</maintainer>

  <doc_depend>doxygen</doc_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <url type="website">http://drake.mit.edu</url>
  <url type="bugtracker">https://github.com/RobotLocomotion/drake/issues</url>
</package>
