# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

exports_files(["CPPLINT.cfg"])

drake_cc_library(
    name = "attic_warning",
    srcs = ["attic_warning.cc"],
    hdrs = ["attic_warning.h"],
    copts = ["-Wno-deprecated-declarations"],
    strip_include_prefix = "/attic",
    visibility = ["//attic:__subpackages__"],
    deps = ["//common:essential"],
)

add_lint_tests()
